🗃️ 음식점 스키마 결정 및 DB description 추가
